# OpenCVLibtorchProjectTutorials

./: .gitignore  CMakeLists.txt  README.md  items_export.csv  main.cpp
ANN/: ann_fashion_mnist.cpp
ANNGPUBASED/: ANNGPUBASED.cpp  CustomDatasets.hpp  DataProcessing.cpp
BasicFunctionality/: readingImage.cpp
TrainingPipeline/: TrainingNNDataLoader.cpp
autogradsInLibtorch/: autogradsincpp.cpp
src/ANN/: ann_fashion_mnist.cpp
src/ANNGPUBASED/: ANNGPUBASED.cpp  CNNImple.cpp  CNNImple.hpp  CustomDatasets.cpp  DataProcessing.hpp  debug_csv.cpp
src/BasicFunctionality/: BasicOperationOnTensors.cpp  readingImage.cpp
src/LinearRegression/: LinearRegression.cpp
src/ReadingAndWriting/: readingAndWritingPrevalidation.cpp  readingCsv.cpp
src/TensorManipulation/: tensor.cpp
src/TrainingPipeline/: TrainingNNDataLoader.cpp  TrainingNNModule.cpp  TrainingPipeline.cpp
src/autogradsInLibtorch/: autogradsincpp.cpp
